# crown-of-calobra

./: .gitignore  AGENTS.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: data.py  models.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/gpx/: stage-1.gpx  stage-2.gpx  stage-3.gpx  stage-4.gpx  stage-6.gpx  stage-7.gpx  stage-8.gpx
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/components/: AthleteCard.jsx  AthleteCard.module.css  ClimbProfile.jsx  ElevationProfile.jsx  ElevationProfile.module.css  MiniMap.jsx  StageCard.jsx  StageCard.module.css  StagePhotos.jsx  StagePhotos.module.css  StageResults.jsx  StageResults.module.css  StageSegments.jsx  StageSegments.module.css  StravaRouteSection.jsx  StravaRouteSection.module.css  ThemeToggle.jsx  ThemeToggle.module.css
frontend/src/data/: stage-results.json  stage-segments.json  stages.js  strava-routes.json  teammates.json
frontend/src/hooks/: useGpxTrack.js  useTheme.js
frontend/src/pages/: HomePage.jsx  HomePage.module.css  StagePage.jsx  StagePage.module.css  TeammatesPage.jsx  TeammatesPage.module.css
frontend/src/utils/: detectClimbs.js  gradients.js
scripts/: fetch-segments.js  fetch-strava.js  fetch-teammates.js
